--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
   </style>
 </head>
 <body>
-  <h1>🌸 To My Beautiful Wife 🌸</h1>
+  <h1>🌸 To My Beloved Marissa Dania 🌸</h1>
   
   <div class="message">
     <p>
-      My dearest love,<br><br>
+      My sha,<br><br>
       Every moment with you is the sweetest part of my life. You are my joy, my heart, my everything. 💖<br><br>
       I love you endlessly — forever and always. ❤️💐
     </p>
@@ -87,7 +87,7 @@
   
   <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="cute gif" class="gif" />
   <img src="https://media.giphy.com/media/3o6ZsXmTvs5vZiPI7m/giphy.gif" alt="cute gif" class="gif" />
-  <img src="https://media.giphy.com/media/j0kQJxo5mzGYboB7qM/giphy.gif" alt="cute gif" class="gif" />
+  <img src="https://giphy.com/gifs/spongebob-26FLdmIp6wJr91JAI" alt="cute gif" class="gif" />
   
   <footer>
     <p>Made with ❤️ by your husband.</p>
