--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>To My Lovely Wife ❤️</title>
+  <title>To My Future ❤️</title>
   <style>
     body {
       margin: 0;
@@ -90,7 +90,7 @@
   <img src="https://giphy.com/gifs/spongebob-26FLdmIp6wJr91JAI" alt="cute gif" class="gif" />
   
   <footer>
-    <p>Made with ❤️ by your husband.</p>
+    <p>Made with ❤️ by your Harif.</p>
   </footer>
 
   <!-- Optional background music -->
