--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
   <div class="message">
     <p>
       My sha,<br><br>
-      Every moment with you is the sweetest part of my life. You are my joy, my heart, my everything. 💖<br><br>
-      I love you endlessly — forever and always. ❤️💐
+      I just made this website today just to tell you that I love you. <br><br>
+      I love you endlessly — forever and always. ❤️💐 <br><br>
+      Looking forward to more days with you :)
     </p>
   </div>
   
