--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     </p>
   </div>
   
-  <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="cute gif" class="gif" />
-  <img src="https://media.giphy.com/media/3o6ZsXmTvs5vZiPI7m/giphy.gif" alt="cute gif" class="gif" />
-  <img src="https://giphy.com/gifs/spongebob-26FLdmIp6wJr91JAI" alt="cute gif" class="gif" />
+  <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWI5emQ2ejRhemYwdHo2NTBzdXB1NHl4b2ZvNGllNGgwenZtNm9wZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/kcZPBnwMkbKSgdTdK9/giphy.gif" alt="cute gif" class="gif" />
+  <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZm45MTRqdWJmdnFyZzJ3bmZkNXMxemxiaW51OXlpaG5mMmVzNTdoYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/4N1wOi78ZGzSB6H7vK/giphy.gif" alt="cute gif" class="gif" />
+  <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExa2ZjbmF5ZHpzaDBpMWdja2dyZ3N0MzBmcGs5bGJsMG53bmlkMDE4eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/26FLdmIp6wJr91JAI/giphy.gif" alt="cute gif" class="gif" />
   
   <footer>
     <p>Made with ❤️ by your Harif.</p>
