--- a/reasons.html
+++ b/reasons.html
@@ -57,6 +57,91 @@
     <li>You believe in love and dreams, just like me.</li>
     <li>You always make me feel safe, understood, and wanted.</li>
     <li>You are Sha, and being you is the best gift to this world. ❤️</li>
+    <li>Your laugh makes everything better.</li>
+    <li>You inspire me to be a better man every single day.</li>
+    <li>You’re my comfort person when the world feels heavy.</li>
+    <li>The way you love your family is admirable.</li>
+    <li>You make even the simplest moments feel special.</li>
+    <li>You listen to me, even when I don’t know how to explain myself.</li>
+    <li>You’re creative and artistic.</li>
+    <li>You look amazing in everything you wear.</li>
+    <li>You’re naturally beautiful, even when you’re not trying.</li>
+    <li>You support my dreams and always believe in me.</li>
+    <li>You’re gentle with animals — especially your cat 😺</li>
+    <li>You make baking look like magic.</li>
+    <li>You value honesty and stay true to your beliefs.</li>
+    <li>You’re incredibly smart and driven.</li>
+    <li>You’re curious about the world and life.</li>
+    <li>You’re patient, even when things get hard.</li>
+    <li>You laugh at my silly jokes.</li>
+    <li>You know how to cheer me up when I’m down.</li>
+    <li>You smell amazing all the time.</li>
+    <li>You’re very photogenic (especially on the bridge one day 😍).</li>
+    <li>Your love makes me feel like the luckiest guy alive.</li>
+    <li>You forgive easily and love deeply.</li>
+    <li>You’re humble and kind, never boastful.</li>
+    <li>You value small moments as much as big ones.</li>
+    <li>You’re a great listener.</li>
+    <li>Your texts brighten my whole day.</li>
+    <li>Your hands fit perfectly in mine.</li>
+    <li>Your eyes sparkle when you’re happy.</li>
+    <li>You have an aesthetic sense that amazes me.</li>
+    <li>You made your own website. 😎</li>
+    <li>You’re dependable and responsible.</li>
+    <li>You speak with grace and purpose.</li>
+    <li>You light up every room you enter.</li>
+    <li>You’re soft-spoken but powerful.</li>
+    <li>You show your emotions openly.</li>
+    <li>You make me want to believe in forever.</li>
+    <li>You’re honest, even when it’s hard.</li>
+    <li>You’ve got the most adorable reactions.</li>
+    <li>You love cute things (like cats and tiny cakes 🐾).</li>
+    <li>You look perfect when you're focused.</li>
+    <li>You bring peace to chaos.</li>
+    <li>Your cooking tastes like home.</li>
+    <li>You care about others deeply.</li>
+    <li>You motivate me even when you don’t mean to.</li>
+    <li>You’re my best friend in the whole world.</li>
+    <li>You accept me, flaws and all.</li>
+    <li>Your hugs could fix the world.</li>
+    <li>You believe in us.</li>
+    <li>You’re my favorite hello and hardest goodbye.</li>
+    <li>You always try to see the good in people.</li>
+    <li>You make rainy days feel cozy.</li>
+    <li>You make ordinary things extraordinary.</li>
+    <li>You’re proud of who you are.</li>
+    <li>You challenge me in all the best ways.</li>
+    <li>You’re not afraid to be real.</li>
+    <li>You’re gentle even when you’re angry.</li>
+    <li>You stay kind even when you’re hurt.</li>
+    <li>You make me excited about the future.</li>
+    <li>You believe in second chances.</li>
+    <li>You love your little brother so dearly.</li>
+    <li>You have this calming aura I can’t explain.</li>
+    <li>Your late night texts always make me smile.</li>
+    <li>You’re pure in a world that isn't.</li>
+    <li>You’ve seen my worst and still chose me.</li>
+    <li>You’re strong without being cold.</li>
+    <li>You’re sensitive like a diamond in glass — rare and precious.</li>
+    <li>You let me in to see your real self.</li>
+    <li>You believe in God and love.</li>
+    <li>You’re everything I prayed for.</li>
+    <li>You turn my bad days into better ones.</li>
+    <li>You’ve got the cutest pout when upset.</li>
+    <li>You deserve the world, and I want to give it to you.</li>
+    <li>You love sunsets and skies.</li>
+    <li>You laugh from the heart.</li>
+    <li>You’re a masterpiece in progress.</li>
+    <li>You see beauty in little things.</li>
+    <li>You talk to your cat like it’s a baby 😹</li>
+    <li>You love café hopping and cozy dates.</li>
+    <li>You look adorable when sleepy.</li>
+    <li>You make silence feel safe.</li>
+    <li>You’re my safe place.</li>
+    <li>You matter more to me than anything.</li>
+    <li>You give the best reactions to compliments.</li>
+    <li>You complete me in every way.</li>
+    <li>You are, and always will be, the love of my life. 💞</li>
   </ul>
 
   <footer>
