--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Will You Be Mine? 💖</title>
+  <title>Will You? 💖</title>
   <style>
     body {
       margin: 0;
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-  <h1>Will you be mine forever, Marissa Dania? 💍</h1>
+  <h1>Marissa Dania, will you officially be my girlfriend? </h1>
 
   <div class="buttons">
     <button id="yes" onclick="sayYes()">Yes 😍</button>
