--- a/love.html
+++ b/love.html
@@ -136,9 +136,9 @@
   <div class="nav-buttons">
     <button onclick="location.href='countdown.html'">⏳ Countdown</button>
     <button onclick="location.href='reasons.html'">💘 100 Reasons</button>
-    <button onclick="location.href='abouther.html'">🌷 About Her</button>
+    <button onclick="location.href='about-her.html'">🌷 About Her</button>
     <button onclick="location.href='wishlist.html'">📝 Wishlist</button>
-    <button onclick="location.href='playlist.html'">🎵 Playlist</button>
+    <button onclick="location.href='playlistt.html'">🎵 Playlist</button>
     <button onclick="location.href='ourstories.html'">📖 Our Stories</button>
   </div>
 
